# dunsumday

./: .gitignore  CHANGES.md  Cargo.toml  README.md  default-config.yaml  dev-config.yaml  generate-default-config  makefile
lib/: Cargo.toml
lib/src/: config.rs  configrefs.rs  db.rs  lib.rs  types.rs  util.rs
lib/src/config/: parse.rs  validate.rs
lib/src/db/: sqlite.rs  util.rs
lib/src/db/sqlite/: dbtypes.rs  fromdb.rs  read.rs  todb.rs  write.rs
lib/src/util/: config.rs  occgen.rs  progress.rs  sched.rs
runtime-data/db/schema/: 00-init.sql
webserver/: Cargo.toml
webserver/runtime-data/: ui
webserver/src/: api.rs  configrefs.rs  constant.rs  main.rs  server.rs  ui.rs
webserver/src/api/: item.rs  notfound.rs
webui/: makefile  package-lock.json  package.json
webui/src/: index.html  index.js  main.css
