[package]
name = "dunsumday"
version = "0.0.0-next"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["clock", "serde"] }
env_logger = "0.11.5"
rmp-serde = "1.1.1"
rusqlite = { version = "0.32.1", features = ["array", "bundled"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
shellexpand = "3.1.0"
strum = { version = "0.26.3", features = ["derive"] }
