[package]
name = "dunsumday_webserver"
version = "0.0.0-next"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.4.0", features = ["rustls"] }
clap = { version = "4.5.31", features = ["derive", "wrap_help"] }
dunsumday = { path = "../lib" }
env_logger = "0.11.5"
serde = "1.0.193"
